--- a/multithreading/CMakeLists.txt
+++ b/multithreading/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/multithreading)
+
 file(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
 
 foreach(source_file ${SOURCE_FILES})
@@ -5,8 +7,10 @@ foreach(source_file ${SOURCE_FILES})
 
     add_executable(${target_name} ${source_file})
 
-    target_link_libraries(${target_name} ${MATH_LIB})
+    if(${target_name} STREQUAL "prime")
+        target_link_libraries(${target_name} ${MATH_LIB})
+    endif()
 
-    install(TARGETS ${target_name} DESTINATION bin/multithreading)
+    install(TARGETS ${target_name})
     
 endforeach(source_file ${SOURCE_FILES})
