--- a/programs/CLinkedList/CMakeLists.txt
+++ b/programs/CLinkedList/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/Programs)
+
 add_executable(CLinkedList linked_list.h examples/example.c)
 
-install(TARGETS CLinkedList DESTINATION bin/programs/CLinkedList)
+install(TARGETS CLinkedList)
