--- a/programs/DynarC/CMakeLists.txt
+++ b/programs/DynarC/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/Programs)
+
 add_executable(DynarC main.c)
 
-install(TARGETS DynarC DESTINATION bin/programs/DynarC)
+install(TARGETS DynarC)
