--- a/programs/txa/CMakeLists.txt
+++ b/programs/txa/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/Programs)
+
 add_executable(txa main.c)
 
-install(TARGETS txa DESTINATION bin/programs/txa)
+install(TARGETS txa)
