--- a/OpenCL/CMakeLists.txt
+++ b/OpenCL/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/OpenCL)
+
 file(GLOB_RECURSE SOURCE_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
 
 find_package(OpenCL REQUIRED)
@@ -9,6 +11,6 @@ foreach(source_file ${SOURCE_FILES})
 
     target_link_libraries(${target_name} OpenCL::OpenCL)
 
-    install(TARGETS ${target_name} DESTINATION bin/basic)
+    install(TARGETS ${target_name})
     
 endforeach(source_file ${SOURCE_FILES})
